refined test case